--- a/src/movingCocktail.css
+++ b/src/movingCocktail.css
@@ -2,7 +2,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap");
 
 .cocktail-party {
-  position: relative;
+  display: flex;
   height: 5px;
   width: 330px;
   background-color: #333;
@@ -13,7 +13,7 @@
 .party {
   text-align: center;
   font-family: "Dancing Script", cursive;
-  font-size: 40px;
+  font-size: 10px;
 }
 /*added animation using key framesn generic and then addidng to the components i want to move */
 @keyframes cocktailAnimation {
@@ -250,6 +250,7 @@
 }
 
 .whiskey:after {
+  animation: cocktailAnimation 3s infinite alternate;
   content: "";
   position: absolute;
   width: 8px;
